tests/lean/match_bug.lean.expected.out
match_bug.lean:3:6: error: invalid pattern, must be an application, constant, variable, type ascription or inaccessible term
