tests/lean/match_bug.lean
definition foo : nat -> nat := fun x,
match x with
| bar -> bar
